project main catdog
all code

--- a/feedback/templates/feedback_form.html
+++ b/feedback/templates/feedback_form.html
@@ -24,6 +24,7 @@
             <img src="{{ cat.image.image.url }}" class="card-img-top" alt="{{ cat.title }}">
             <div class="card-body">
                 <h5 class="card-title">{{ cat.title }}</h5>
+                <p class="card-text">Name: {{ cat.name }}</p>
             </div>
         </div>
     </div>
@@ -39,6 +40,7 @@
             <img src="{{ dog.image.image.url }}" class="card-img-top" alt="{{ dog.title }}">
             <div class="card-body">
                 <h5 class="card-title">{{ dog.title }}</h5>
+                 <p class="card-text">Name: {{ dog.name }}</p>
             </div>
         </div>
     </div>
